<resources>
    <string name="app_name">Dungeon Quest</string>
    <string name="app_publisher">G-Level</string>
    <string name="id">id</string>
    <string name="item">item</string>
    <string name="placeholder">placeholder</string>
    <string name="view_holder">viewholder</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming soon&#8230;</string>
    <string name="show_skill">show_skill</string>
    <string name="sell_item">sell_item</string>
    <string name="buy_item">buy_item</string>
    <string name="skill">skill</string>
    <string name="use_skill">use_skill</string>
    <string name="potion">potion</string>
    <string name="mail_address">guillaume.gouchon@gmail.com</string>
    <string name="contact_title">Question about </string>
    <string name="contact_support_via">Contact support via&#8230;</string>
    <string name="no_mail_client">There are no email apps installed on your device&#8230;</string>
    <string name="rate_dont_want">No, thanks</string>
    <string name="rate_later">Later</string>
    <string name="rate_now">Rate it now\u00A0!</string>
    <string name="rate_title">Rate the app\u00A0?</string>
    <string name="rate_message">If you enjoy playing %s, please take a moment to rate it.\n\nThanks for your support\u00A0!</string>
    <string name="about_title">About Dungeon Quest</string>
    <string name="about_credits">Game and Music by <a href="http://gouchon.com">Guillaume Gouchon</a></string>
    <string name="about_contact">Feel free to <a href="mailto:guillaume.gouchon@gmail.com">contact me</a> if you have any issue or question.</string>
    <string name="about_other_sources">The game uses AndEngine game engine by Nicolas Gramlich.\nGame icons by <a href="http://game-icons.net">game-icons.net</a>.\nDungeon tileset by <a href="http://www.lostgarden.com/2006/07/more-free-game-graphics.html">Daniel Cook</a>.</string>
    <string name="about_version">Version : %s</string>
    <string name="share_subject">Check out %s on Android\u00A0!</string>
    <string name="share_message">This game is cool, you can get it on Google Play\u00A0!\nhttps://play.google.com/store/apps/details?id=%s</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="settings">Options</string>
    <string name="back">Back</string>
    <string name="advertisement">If you enjoy playing this game,\nyou can like my other RPG <a href="https://play.google.com/store/apps/details?id=com.glevel.dungeonhero">Dungeon Hero</a>\u00A0!</string>
    <string name="loading_saved_games">Loading...</string>
    <string name="music_volume">Music / Sound</string>
    <string name="music_off">Off</string>
    <string name="music_on">On</string>
    <string name="about">About Dungeon Quest</string>
    <string name="rate_app">Rate the app</string>
    <string name="share">Share</string>
    <string name="hint_carousel">Swipe right</string>
    <string name="choose_hero_message">Choose a Hero</string>
    <string name="hero_name_input">Enter your name, adventurer...</string>
    <string name="choose_book_message">Choose a Quest</string>
    <string name="ask_tutorial">It is recommended to do the tutorial in order to know how to play\u00A0!\nWould you like to do it now\u00A0?</string>
    <string name="visit_shop">Visit the Shop</string>
    <string name="buy_full_game">Buy full game</string>
    <string name="congratulations_finish_game">Congratulations\u00A0!\n\nYou have finished the game !\n\nTry to finish it with all the charactesrs.\nThanks for playing %s\u00A0!</string>
    <string name="which_quest">Choose a Quest to enter</string>
    <string name="play">Start</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="your_bag">Your Bag</string>
    <string name="buy_item_for">Buy item for %s gold coins</string>
    <string name="sell_item_for">Sell item for %s gold coins</string>
    <string name="transaction_confirmation">Are you sure you want to %1$s %2$s\u00A0?</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="hp">Health points</string>
    <string name="spirit">Spirit : used to react, to resist to magic and to cast spells</string>
    <string name="attack">Attack : used to deal damages</string>
    <string name="defense">Defense : used to avoid and block attacks</string>
    <string name="frags">Frags</string>
    <string name="loading_game">Loading</string>
    <string name="loading_dots">. . .</string>
    <string name="game_paused">Pause</string>
    <string name="resume_game">Resume Game</string>
    <string name="leave_quest">Leave Quest</string>
    <string name="confirm_leave_quest">Are you sure you want to leave this quest\u00A0?\n\n<i>(you will come back to the adventure screen)</i></string>
    <string name="confirm_finish_quest">Are you sure you want to finish this quest and leave the dungeon\u00A0?</string>
    <string name="riddle_answer_input">your answer...</string>
    <string name="game_master">Game Master</string>
    <string name="new_level_title">You reached level %s\u00A0!</string>
    <string name="new_level_text">Choose which skills to improve\u00A0:</string>
    <string name="new_level_points_left">Skill points left : %s</string>
    <string name="improve_skill">Improve skill</string>
    <string name="level_in_game">Level %1$s (%2$s/%3$s)</string>
    <string name="hp_in_game">%1$s / %2$s</string>
    <string name="found_nothing">You found nothing\u00A0!</string>
    <string name="found_item_a">You got a %s\u00A0!</string>
    <string name="found_item_an">You got an %s\u00A0!</string>
    <string name="found_gold">You got %s Gold Coins\u00A0!</string>
    <string name="reward_xp">You were rewarded with %s XP\u00A0!</string>
    <string name="close">Close</string>
    <string name="use">Use</string>
    <string name="equip">Equip</string>
    <string name="unequip">Remove</string>
    <string name="drop">Drop</string>
    <string name="gold_coins">Gold Coins</string>
    <string name="bag_full">Your bag is full, the %s has been dropped on the ground</string>
    <string name="damage">Damage</string>
    <string name="protection">Armor</string>
    <string name="dodge">Dodge</string>
    <string name="movement">Movement</string>
    <string name="initiative">Initiative</string>
    <string name="critical">Critical Hit</string>
    <string name="block">Parry</string>
    <string name="minimum">min. %s </string>
    <string name="exit_stairs">Exit Stairs</string>
    <string name="entrance_stairs">Entrance Stairs</string>
    <string name="go_to_next_floor">Go to next floor</string>
    <string name="finish_quest">Finish the quest</string>
    <string name="use_skill_on">preparing %s...</string>
    <string name="use_skill_off">cancel %s</string>
    <string name="secondary_stats">Secondary stats</string>
    <string name="skills">Skills</string>
    <string name="use_skill_personal">%s\u00A0!</string>
    <string name="drink">Drink</string>
    <string name="sleep_effect">zzz</string>
    <string name="chance_stun">Bonus to stun target</string>
    <string name="two_handed">Two-handed</string>
    <string name="two_handed_description">Both hands are needed to use this item</string>
    <string name="thing_name_with_level">%1$s (lvl %2$s)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discussion_is_over">I don\'t want to talk to you anymore.</string>
    <string name="ok">Ok</string>
    <string name="berserker">Berserker</string>
    <string name="dwarf_warrior">Dwarf Warrior</string>
    <string name="elf_ranger">Elf Ranger</string>
    <string name="wizard">Wizard</string>
    <string name="thief">Thief</string>
    <string name="druid">Druid</string>
    <string name="berserker_description">You are the Berserker, a fearless tribal warrior fighting his foes with rage and fury.</string>
    <string name="dwarf_warrior_description">You are the Dwarf Warrior, a tough close-combat fighter but weak against magic.</string>
    <string name="elf_ranger_description">You are the Elf Ranger, a versatile adventurer with range attack skills as well as magical abilities.</string>
    <string name="wizard_description">You are the Wizard, a great sorcerer specialized in offensive spells. Be sure to keep your distance during fights though.</string>
    <string name="thief_description">You are the Thief, a silent but deadly adventurer who can hide herself from her enemies.</string>
    <string name="druid_description">You are the Druid, a strong spell caster who uses her knowledge of natural energies to defeat her foes.</string>
    <string name="light">Candelabra</string>
    <string name="treasure_chest">Treasure Chest</string>
    <string name="table">Table</string>
    <string name="pot">Container</string>
    <string name="small_chest">Small Chest</string>
    <string name="statue">Statue</string>
    <string name="goblin">Goblin</string>
    <string name="orc">Orc</string>
    <string name="orc_captain">Orc Captain</string>
    <string name="troll">Troll</string>
    <string name="ogre">Ogre</string>
    <string name="ogre_king">Ogre King</string>
    <string name="chaos_warrior">Chaos Warrior</string>
    <string name="chaos_wizard">Chaos Wizard</string>
    <string name="gargoyle">Gargoyle</string>
    <string name="demon">Demon</string>
    <string name="demon_king">Master Demon</string>
    <string name="axe">Axe</string>
    <string name="battle_axe">Battle Axe</string>
    <string name="boomerang">Boomerang</string>
    <string name="bow">Bow</string>
    <string name="broad_sword">Broad Sword</string>
    <string name="crossbow">Crossbow</string>
    <string name="dagger">Dagger</string>
    <string name="large_shield">Large Shield</string>
    <string name="long_sword">Long Sword</string>
    <string name="round_shield">Round Shield</string>
    <string name="short_sword">Short Sword</string>
    <string name="shuriken">Shuriken</string>
    <string name="spear">Spear</string>
    <string name="spiked_mace">Morgenstern</string>
    <string name="throwing_daggers">Throwing Dagger</string>
    <string name="wizard_staff">Wizard Staff</string>
    <string name="claws">Claws</string>
    <string name="robe">Cloak</string>
    <string name="leather_vest">Leather Vest</string>
    <string name="leather_plastron">Leather Plastron</string>
    <string name="chainmail">Chainmail</string>
    <string name="lamellar">Lamellar</string>
    <string name="breast_plate">Breast Plate</string>
    <string name="force_potion">Potion of Force</string>
    <string name="force_potion_description">Boosts up your strength for a small amount of time.</string>
    <string name="greater_healing_potion">Greater Healing Potion</string>
    <string name="greater_healing_potion_description">Makes recover 30 health points.</string>
    <string name="healing_potion">Healing Potion</string>
    <string name="healing_potion_description">Makes recover 15 health points.</string>
    <string name="heroic_potion">Heroic Potion</string>
    <string name="heroic_potion_description">Once drunk, this potion makes you feel heroic. You can play twice in a row.</string>
    <string name="invisibility_potion">Potion of Invisibility</string>
    <string name="invisibility_potion_description">This grey liquid turns you invisible for a small amount of time.</string>
    <string name="luck_potion">Potion of Luck</string>
    <string name="luck_potion_description">You are feeling lucky; it is easier for you to avoid attacks.</string>
    <string name="magic_shield_potion">Potion of Magic Shield</string>
    <string name="magic_shield_potion_description">If you drink this mixture, an invisible magic shield will appear around you and will protect you for a small amount of time.</string>
    <string name="recovery_potion">Potion of Recovery</string>
</resources>