<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gui"
    android:orientation="vertical"
    android:padding="10dp">

    <com.giggs.heroquest.views.CustomTextView
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/about_title"
        android:textSize="32sp" />

    <com.giggs.heroquest.views.CustomTextView
        android:id="@+id/aboutCredits"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_credits" />

    <com.giggs.heroquest.views.CustomTextView
        android:id="@+id/aboutContact"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_contact" />

    <com.giggs.heroquest.views.CustomTextView
        android:id="@+id/aboutSources"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_other_sources" />

    <com.giggs.heroquest.views.CustomTextView
        android:id="@+id/version"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left|center_vertical"
        android:textSize="15sp" />

</LinearLayout>