<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_game_menu"
    android:gravity="center"
    android:orientation="vertical">

    <com.giggs.heroquest.views.CustomTextView
        style="@style/SplashScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/game_paused" />

    <com.giggs.heroquest.views.CustomButton
        android:id="@+id/resume_game_btn"
        style="@style/HomeScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/resume_game" />

    <com.giggs.heroquest.views.CustomButton
        android:id="@+id/exit_btn"
        style="@style/HomeScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/exit" />
</LinearLayout>