<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Margin in ViewPager caused the view to be too large. This manual margin fixes it. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:background="@drawable/bg_carousel_item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="7dp"
                android:layout_marginRight="5dp" />

            <com.giggs.heroquest.views.CustomTextView
                style="@style/HeroTitle"
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <com.giggs.heroquest.views.CustomTextView
            android:layout_marginTop="1dp"
            style="@style/HeroDescription"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <com.giggs.heroquest.views.HintTextView
                    android:id="@+id/hp"
                    style="@style/HeroStat"
                    android:drawableLeft="@drawable/ic_health"
                    custom:textHint="@string/hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp" />

                <com.giggs.heroquest.views.HintTextView
                    android:id="@+id/spirit"
                    style="@style/HeroStat"
                    android:drawableLeft="@drawable/ic_spirit"
                    custom:textHint="@string/spirit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.giggs.heroquest.views.HintTextView
                    android:id="@+id/attack"
                    style="@style/HeroStat"
                    android:drawableLeft="@drawable/ic_axe"
                    custom:textHint="@string/attack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp" />

                <com.giggs.heroquest.views.HintTextView
                    android:id="@+id/defense"
                    style="@style/HeroStat"
                    android:drawableLeft="@drawable/ic_shield"
                    custom:textHint="@string/defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>