<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_cave">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.giggs.heroquest.views.CustomTextView
                android:id="@+id/back_button"
                style="@style/Button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:padding="5dp"
                android:textSize="18sp"
                android:layout_gravity="right" />

            <GridLayout
                android:id="@+id/shop_offers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:columnCount="8">

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />
            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <com.giggs.heroquest.views.CustomTextView
                    style="@style/HeroTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_bag"
                    android:drawablePadding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_bag" />

                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp" />

                <com.giggs.heroquest.views.CustomTextView
                    style="@style/HeroTitle"
                    android:id="@+id/gold_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:drawablePadding="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_coins" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/bag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="10">

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />

                <include layout="@layout/in_game_item" />
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>